refactor(LottoForm): 추상클래스에서 인터페이스로 변경